# xtrad_stt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml
docker/: DockerFile  docker-compose.yml
docs/: architecture.md  cli.md  configuration.md  contributing.md  installation.md
src/cli/: main.py
src/config/: config.py  edge.yaml  prod.yaml
src/core/: base.py  factory.py
src/utils/: cache.py  errors.py  logger.py
tests/: test_base.py  test_cli.py  test_config.py  test_factory.py  test_utils.py
ui/: app.py
