# pyproject.toml
[tool.poetry]
name = "xtrad-stt"
version = "0.1.0"
description = "A modular, extensible, and open-source Speech-to-Text (STT) framework"
authors = ["Abdou-Raouf Atarmla <raouf@livetrad.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/LiveTrad/xtrad-stt"
keywords = ["stt", "speech-to-text", "open-source", "multilingual"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
black = "^24.0"
isort = "^5.12"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"